--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ header {
     margin: 0 auto;
 }
 
+.study-material {
+        text-align: justify; /* Alinhamento do texto */
+    }
+
 h1 {
     font-size: 2.5rem;
     color: white;
